ステートマシンのサンプルを改修

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,3 +27,6 @@ nablarch.core.validation.ee.SystemChar.message=不正な文字種の値が指定
 
 万円.message={min}万円以上、{max}万円以下で入力してください。
 please.change.me.validation.Date.message=正しい日付を入力してください。
+
+please.change.me.card.notFound=カード申し込み情報が存在しません。
+please.change.me.card.done=審査を行いました。
